@@ -22,5 +22,5 @@
 
 typedef K_TYPELIST_2( StringReplacerProc, StringReplacerConf ) StringReplacerPlugin;
 K_EXPORT_COMPONENT_FACTORY( libkttsd_stringreplacerplugin,
-    KGenericFactory<StringReplacerPlugin>("kttsd_stringreplacerplugin") );
+    KGenericFactory<StringReplacerPlugin>("kttsd") );
 
