@@ -26,7 +26,7 @@
 #include "kttsd.h"
 
 int main (int argc, char *argv[]){
-   KLocale::setMainCatalogue("kdelibs");
+   KLocale::setMainCatalogue("kttsd");
    KAboutData aboutdata("kttsd", I18N_NOOP("kttsd"),
          "0.3.0", I18N_NOOP("Text-to-speech synthesis deamon"),
          KAboutData::License_GPL, "(C) 2002, José Pablo Ezequiel Fernández");
