@@ -19,5 +19,5 @@
 
 #include "artsplayer.h"
 
-K_EXPORT_COMPONENT_FACTORY( libkttsd_artsplugin, KGenericFactory<ArtsPlayer>("plugin_ArtsPlayer") );
+K_EXPORT_COMPONENT_FACTORY( libkttsd_artsplugin, KGenericFactory<ArtsPlayer>("kttsd") );
 
