@@ -2,10 +2,7 @@ INCLUDES = \
         -I$(top_srcdir)/kttsd/libkttsd -I$(top_builddir)/kttsd/libkttsd \
         -I$(kde_includes)/arts \
         $(all_includes)
-AM_CPPFLAGS = \
-        -I$(top_srcdir)/kttsd/libkttsd -I$(top_builddir)/kttsd/libkttsd \
-        -I$(kde_includes)/arts \
-        $(all_includes)
+
 METASOURCES = AUTO
 
 kde_module_LTLIBRARIES = libkttsd_commandplugin.la
@@ -20,7 +17,3 @@ libkttsd_commandplugin_la_LIBADD = $(top_builddir)/kttsd/libkttsd/libkttsd.la -l
 
 services_DATA = kttsd_commandplugin.desktop
 servicesdir = $(kde_servicesdir)
-
-# Get translators to translate library
-messages: rc.cpp
-	$(XGETTEXT) *.cpp *.h -o $(podir)/kttsd_commandplugin.pot
