@@ -21,5 +21,5 @@
 #include "eposproc.h"
 
 typedef K_TYPELIST_2( EposProc, EposConf ) Epos;
-K_EXPORT_COMPONENT_FACTORY( libkttsd_eposplugin, KGenericFactory<Epos>("kttsd_eposplugin") );
+K_EXPORT_COMPONENT_FACTORY( libkttsd_eposplugin, KGenericFactory<Epos>("kttsd") );
 
