@@ -3,11 +3,6 @@ INCLUDES = \
 	-I$(kde_includes)/arts \
 	$(all_includes)
 
-AM_CPPFLAGS = \
-	-I$(top_srcdir)/kttsd/libkttsd -I$(top_builddir)/kttsd/libkttsd \
-	-I$(kde_includes)/arts \
-	$(all_includes)
-
 METASOURCES = AUTO
 
 kde_module_LTLIBRARIES = libkttsd_freettsplugin.la
@@ -22,7 +17,3 @@ libkttsd_freettsplugin_la_LIBADD = $(top_builddir)/kttsd/libkttsd/libkttsd.la
 
 services_DATA = kttsd_freettsplugin.desktop
 servicesdir = $(kde_servicesdir)
-
-# Get translators to translate library
-messages: rc.cpp
-	$(XGETTEXT) *.cpp *.h -o $(podir)/kttsd_freettsplugin.pot
