@@ -2,10 +2,7 @@ INCLUDES = \
 	-I$(top_srcdir)/kttsd/libkttsd -I$(top_builddir)/kttsd/libkttsd \
 	-I$(kde_includes)/arts \
 	$(all_includes)
-AM_CPPFLAGS = \
-	-I$(top_srcdir)/kttsd/libkttsd -I$(top_builddir)/kttsd/libkttsd \
-	-I$(kde_includes)/arts \
-	$(all_includes)
+
 METASOURCES = AUTO
 
 kde_module_LTLIBRARIES = libkttsd_hadifixplugin.la
@@ -37,7 +34,3 @@ install-data-local:
 uninstall-local:
 	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/16x16/actions/male.png
 	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/16x16/actions/female.png
-
-# Get translators to translate library
-messages: rc.cpp
-	$(XGETTEXT) *.cpp *.h -o $(podir)/kttsd_hadifixplugin.pot
